Front-end do dashboard finalizado!

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -27,8 +27,8 @@
           <form class="login">
             <h1>Bem-vindo ao<span>Task Manager!</span></h1>
             <div class="input">
-              <input type="text" placeholder="Usuário" required>
-              <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+              <input type="email" placeholder="E-mail" required>
+              <i class="fa fa-envelope fa-lg fa-fw" aria-hidden="true"></i>
             </div>            
             <div class="input">
               <input type="password" placeholder="Senha" required>
@@ -36,7 +36,7 @@
             </div>        
             
             <div class="botoes">
-              <button type="submit" class="btn">Entre</button>
+              <button type="submit" class="btn"><a class="link" href="dashboard.html" style="color: #fff;">Entre</a></button>
               <button class="btn-ghost">Cadastre-se</button>
             </div>
           </form>
@@ -44,7 +44,7 @@
           <form class="cadastro">
             <h1>Faça o seu <span>cadastro!</span></h1>
             <div class="input">
-              <input type="text" placeholder="Usuário" required>
+              <input type="text" placeholder="Nome e sobrenome" required>
               <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
             </div>  
             <div class="input">
