Back-end finalizado (com php puro)!

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -7,7 +7,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <script>
     document.documentElement.className += ' js';
   </script>
@@ -205,7 +205,7 @@
   
   
   <!--JavaScript-->
-  <script src="./js/dashboard.js"></script>
+  <script src="../js/dashboard.js"></script>
   <!--JavaScript-->
   
 </body>
